--- a/.github/workflows/kind.yaml
+++ b/.github/workflows/kind.yaml
@@ -69,12 +69,16 @@ jobs:
           source src/test/scripts/kind/deploy_app.sh
           verify_ingress
 
-      - name: Test scaling ${{inputs.dc_app}}
+      - name: Get secrets
         run: |
-          echo "[INFO]: Scaling ${DC_APP} to 2 replicas"
-          kubectl scale sts/${DC_APP} --replicas=2 -n atlassian
-          sleep 10
-          kubectl wait --for=condition=ready pod/${DC_APP}-1 -n atlassian --timeout=360s
+          kubectl get secrets -n atlassian -o yaml > logs/secrets.yaml
+          
+      # - name: Test scaling ${{inputs.dc_app}}
+      #   run: |
+      #     echo "[INFO]: Scaling ${DC_APP} to 2 replicas"
+      #     kubectl scale sts/${DC_APP} --replicas=2 -n atlassian
+      #     sleep 10
+      #     kubectl wait --for=condition=ready pod/${DC_APP}-1 -n atlassian --timeout=360s
 
       - name: Get debug info
         if: always()
