--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -14,6 +14,8 @@ jobs:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       PYTHONPATH: /opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages
     runs-on: ubuntu-latest
+    container:
+      image: artifacthub/ah
 
     steps:
       - name: Checkout code
@@ -56,6 +58,10 @@ jobs:
           echo "[INFO]: Preparing release ${GITHUB_REF_NAME##*/}"
           cd data-center-helm-charts
           python src/main/scripts/prepare_release.py ${GITHUB_REF_NAME##*/}
+
+      - name: Lint yamls with ah cli
+        working-directory: ./src/main/charts
+        run: ah lint
 
       - name: Configure Git
         run: |
