--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -59,8 +59,8 @@ jobs:
 
       - name: Lint yamls with ah cli
         run: |
-          echo ${GITHUB_WORKSPACE}
-          docker run -v ${GITHUB_WORKSPACE}/src/main/charts:/charts artifacthub/ah sh -c 'ah lint -p charts/src/main/charts'
+          echo "[INFO]: Validating Chart.yamls in ${GITHUB_WORKSPACE}
+          docker run -v ${GITHUB_WORKSPACE}/src/main/charts:/charts artifacthub/ah sh -c 'ah lint -p /charts'
 
       - name: Configure Git
         run: |
