--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -19,7 +19,7 @@ sources:
 deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: |-
+  artifacthub.io/changes: |
     - "Fix typo in readme as per jira ticket"
     - "Update appVersions for DC apps"
     - "Update Bamboo Readme file"
