--- a/src/main/charts/bitbucket/Chart.yaml
+++ b/src/main/charts/bitbucket/Chart.yaml
@@ -19,7 +19,7 @@ sources:
 deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: |-
+  artifacthub.io/changes: |
     - "Update appVersions for DC apps"
     - "Fix Bitbucket template"
 
