--- a/src/main/charts/jira/Chart.yaml
+++ b/src/main/charts/jira/Chart.yaml
@@ -20,7 +20,7 @@ sources:
 deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: |-
+  artifacthub.io/changes: |
     - "Update appVersions for DC apps"
 
 dependencies:
