--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo
 description: A chart for installing Bamboo Data Center on Kubernetes
 type: application
-version: 1.10.1
+version: 1.10.2
 appVersion: 9.2.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -19,10 +19,10 @@ sources:
 deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: |
-    - "Fix typo in readme as per jira ticket"
-    - "Update appVersions for DC apps"
-    - "Update Bamboo Readme file"
+  artifacthub.io/changes: |-
+    - "Update appVersion"
+    - "Configurable entrypoint for Bamboo server"
+    - "Update"
 dependencies:
 - name: common
   version: 1.0.0
