--- a/src/main/charts/bamboo-agent/Chart.yaml
+++ b/src/main/charts/bamboo-agent/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo-agent
 description: A chart for installing Bamboo Data Center remote agents on Kubernetes
 type: application
-version: 1.10.1
+version: 1.10.2
 appVersion: 9.2.1
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -19,8 +19,8 @@ sources:
 deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: |
-    - "Update Helm chart version"
+  artifacthub.io/changes: |-
+    - "Update"
 dependencies:
 - name: common
   version: 1.0.0
