--- a/src/main/charts/bitbucket/Chart.yaml
+++ b/src/main/charts/bitbucket/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bitbucket
 description: A chart for installing Bitbucket Data Center on Kubernetes
 type: application
-version: 1.10.1
+version: 1.10.2
 appVersion: 7.21.11
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -19,9 +19,10 @@ sources:
 deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: |
-    - "Update appVersions for DC apps"
-    - "Fix Bitbucket template"
+  artifacthub.io/changes: |-
+    - "Update appVersion"
+    - "Make Bitbucket service type configurable"
+    - "Update"
 
 dependencies:
 - name: common
