--- a/src/main/charts/confluence/Chart.yaml
+++ b/src/main/charts/confluence/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: confluence
 description: A chart for installing Confluence Data Center on Kubernetes
 type: application
-version: 1.10.1
+version: 1.10.2
 appVersion: 7.19.5
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -19,9 +19,9 @@ sources:
 deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "true"
-  artifacthub.io/changes: |
-    - "More flexible svc annotations"
-    - "Fix Confluence synchrony settings"
+  artifacthub.io/changes: |-
+    - "Confluence statefulset crashes"
+    - "Update"
 
 dependencies:
 - name: common
