--- a/src/main/charts/crowd/Chart.yaml
+++ b/src/main/charts/crowd/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: crowd
 description: A chart for installing Crowd Data Center on Kubernetes
 type: application
-version: 1.10.1
+version: 1.10.2
 appVersion: 5.1.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -19,8 +19,8 @@ sources:
 deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: |
-    - "Update Helm chart version"
+  artifacthub.io/changes: |-
+    - "Update"
 
 dependencies:
 - name: common
