--- a/src/main/charts/jira/Chart.yaml
+++ b/src/main/charts/jira/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: jira
 description: A chart for installing Jira Data Center on Kubernetes
 type: application
-version: 1.10.1
+version: 1.10.2
 appVersion: 9.4.3
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,8 +20,10 @@ sources:
 deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: |
-    - "Update appVersions for DC apps"
+  artifacthub.io/changes: |-
+    - "Update appVersion"
+    - "Fix Jira startup issues"
+    - "Update"
 
 dependencies:
 - name: common
