--- a/.github/workflows/release-charts.yaml
+++ b/.github/workflows/release-charts.yaml
@@ -59,3 +59,4 @@ jobs:
       - name: Commit and push index.yaml
         run: |
           git commit -m "Update index.yaml post release"
+          git push origin main
