--- a/.github/workflows/release-charts.yaml
+++ b/.github/workflows/release-charts.yaml
@@ -58,7 +58,6 @@ jobs:
 
       - name: Commit and push index.yaml
         run: |
-          git checkout -b update-index-yaml-${GITHUB_RUN_ID}
+          git checkout ${GITHUB_REF_NAME}
           git commit -m "Update index.yaml post release"
-          git push origin update-index-yaml-${GITHUB_RUN_ID}
-          gh pr create --title "Update index.yaml" --body "Update index.yaml after release" --base main --head update-index-yaml-${GITHUB_RUN_ID}
+          git push origin ${GITHUB_REF_NAME}
