--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Prepare Release
 
 on:
@@ -17,20 +14,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Checkout repo
-        run: |
-          git clone https://github.com/bianchi2/data-center-helm-charts
-
-      - name: Test git
-        run: |
-          git --version
-          cd data-center-helm-charts
-          git checkout ${GITHUB_REF_NAME}
-          git log --graph --pretty=format:%s --abbrev-commit --date=relative jira-1.9.1..main -- src/main/charts/bamboo
+          ref: refs/heads/main
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
@@ -54,8 +41,6 @@ jobs:
       - name: Generate changelog and Chart annotations
         run: |
           echo "[INFO]: Preparing release ${GITHUB_REF_NAME##*/}"
-          cd data-center-helm-charts
-          git checkout ${GITHUB_REF_NAME}
           python src/main/scripts/prepare_release.py ${GITHUB_REF_NAME##*/}
 
       - name: Lint yamls with ah cli
@@ -70,10 +55,6 @@ jobs:
 
       - name: Commit changes and raise a PR
         run: |
-          git checkout ${GITHUB_REF_NAME}
-          cp -rf data-center-helm-charts/src/* src
-          rm -rf data-center-helm-charts
-          git status
           git add -A
           git commit -m "Prepare release ${GITHUB_REF_NAME##*/}"
           git push origin ${GITHUB_REF_NAME}
