--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -25,13 +25,6 @@ jobs:
         run: |
           git clone https://github.com/bianchi2/data-center-helm-charts
 
-      - name: Test git
-        run: |
-          git --version
-          cd data-center-helm-charts
-          git checkout ${GITHUB_REF_NAME}
-          git log --graph --pretty=format:%s --abbrev-commit --date=relative jira-1.9.1..main -- src/main/charts/bamboo
-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -61,7 +54,7 @@ jobs:
       - name: Lint yamls with ah cli
         run: |
           echo "[INFO]: Validating Chart.yamls in ${GITHUB_WORKSPACE}"
-          docker run -v ${GITHUB_WORKSPACE}/src/main/charts:/charts artifacthub/ah sh -c 'ah lint -p /charts'
+          docker run -v ${GITHUB_WORKSPACE}/data-center-helm-charts/src/main/charts:/charts artifacthub/ah sh -c 'ah lint -p /charts'
 
       - name: Configure Git
         run: |
