Fix a few things

--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -52,10 +52,7 @@ jobs:
 
       - name: Lint yamls with ah cli
         run: |
-          echo "[INFO]: Validating Chart.yamls in ${GITHUB_WORKSPACE}"
-          mkdir -p /tmp/charts
-          cp -r ${GITHUB_WORKSPACE}/data-center-helm-charts/src/main/charts /tmp/charts
-          docker run -v /tmp/charts:/charts artifacthub/ah sh -c 'ah lint -p /charts'
+          docker run -v ${GITHUB_WORKSPACE}/src/main/charts:/charts artifacthub/ah sh -c 'ah lint -p /charts'
 
       - name: Configure Git
         run: |
