--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -17,13 +17,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Checkout repo
-        run: |
-          git clone https://github.com/bianchi2/data-center-helm-charts
+          ref: refs/heads/main
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
@@ -47,25 +44,21 @@ jobs:
       - name: Generate changelog and Chart annotations
         run: |
           echo "[INFO]: Preparing release ${GITHUB_REF_NAME##*/}"
-          cd data-center-helm-charts
           python src/main/scripts/prepare_release.py ${GITHUB_REF_NAME##*/}
-
-      - name: Lint yamls with ah cli
-        run: |
-          docker run -v ${GITHUB_WORKSPACE}/src/main/charts:/charts artifacthub/ah sh -c 'ah lint -p /charts'
 
       - name: Configure Git
         run: |
           git config --global user.name "$GITHUB_ACTOR"
           git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: Commit changes and raise a PR
+      - name: Lint yamls with ah cli
         run: |
           git checkout ${GITHUB_REF_NAME}
-          cp -rf data-center-helm-charts/src/* src
-          rm -rf data-center-helm-charts
-          git status
           git add -A
           git commit -m "Prepare release ${GITHUB_REF_NAME##*/}"
+          docker run -v ${GITHUB_WORKSPACE}/src/main/charts:/charts artifacthub/ah sh -c 'ah lint -p /charts'
+
+      - name: Commit changes and raise a PR
+        run: |
           git push origin ${GITHUB_REF_NAME}
           gh pr create --title "Release/${GITHUB_REF_NAME##*/}" --body "Prepare to release ${GITHUB_REF_NAME##*/}" --base main --head ${GITHUB_REF_NAME}
