--- a/src/main/charts/bitbucket/Chart.yaml
+++ b/src/main/charts/bitbucket/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bitbucket
 description: A chart for installing Bitbucket Data Center on Kubernetes
 type: application
-version: 1.10.14
+version: 1.10.15
 appVersion: 7.21.11
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,8 +20,10 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Improve flexibility of Bitbucket ssh svc template"
-    - "Update Bitbucket stateful set to include tolerations"
+    - "Remove dependencies to remove deprecated code"
+    - "Remove helmfile for better readability"
+    - "Optimize chart for better maintainability"
+    - "Update tests to optimize memory usage"
 
 dependencies:
 - name: common
