--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo
 description: A chart for installing Bamboo Data Center on Kubernetes
 type: application
-version: 1.10.14
+version: 1.10.15
 appVersion: 9.2.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,8 +20,10 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update appVersion in DC apps"
-    - "Fix Bamboo jmx service port allocation"
+    - "Optimize templates to remove deprecated code"
+    - "Update chart to implement a new feature"
+    - "Optimize helmfile for better readability"
+    - "Fix dependencies to improve performance"
 dependencies:
 - name: common
   version: 1.0.0
