--- a/.github/workflows/release-charts.yaml
+++ b/.github/workflows/release-charts.yaml
@@ -36,10 +36,15 @@ jobs:
 
       - name: Generate Release Notes for GitHub Releases
         run: |
-          git status
-          git pull
           cd src/main/scripts
-          ./release_notes_generator.sh ${GITHUB_WORKSPACE}
+          products=(bamboo bamboo-agent bitbucket confluence crowd jira)
+          export REPO_PATH="${GITHUB_WORKSPACE}"
+          export CHARTS_LOCATION="src/main/charts"
+          for product in "${products[@]}"; do
+            echo "[INFO]: Generating ${REPO_PATH}/${CHARTS_LOCATION}/${product}/RELEASE_NOTES.md"
+            REL_NOTES_LIST=$(python3 -W ignore -c "import prepare_release; print (prepare_release.gen_changelog(\"${product}\", \"${REPO_PATH}\"))")
+            python3 -c "print('\n'.join(\"${REL_NOTES_LIST}\"))" > "${REPO_PATH}"/"${CHARTS_LOCATION}"/"${product}"/RELEASE_NOTES.md
+          done
 
       - name: Execute helm dependency update for bamboo chart
         run: helm dependency update src/main/charts/bamboo
