--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo
 description: A chart for installing Bamboo Data Center on Kubernetes
 type: application
-version: 1.10.17
+version: 1.10.18
 appVersion: 9.2.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,11 +20,7 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update appVersion in DC apps"
-    - "Update bamboo tests to improve performance"
-    - "Optimize bamboo chart to optimize memory usage"
-    - "Remove bamboo templates to optimize memory usage"
-    - "Add bamboo chart to fix a bug"
+    - "Update Helm chart version"
 dependencies:
 - name: common
   version: 1.0.0
