--- a/src/main/charts/confluence/Chart.yaml
+++ b/src/main/charts/confluence/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: confluence
 description: A chart for installing Confluence Data Center on Kubernetes
 type: application
-version: 1.10.17
+version: 1.10.18
 appVersion: 7.19.5
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,11 +20,7 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "true"
   artifacthub.io/changes: |-
-    - "Update appVersion in DC apps"
-    - "Fix confluence chart for better maintainability"
-    - "Remove confluence tests to remove deprecated code"
-    - "Refactor confluence chart for better maintainability"
-    - "Merge confluence tests to remove deprecated code"
+    - "Update Helm chart version"
 
 dependencies:
 - name: common
