--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo
 description: A chart for installing Bamboo Data Center on Kubernetes
 type: application
-version: 1.10.19
+version: 1.10.20
 appVersion: 9.2.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,7 +20,15 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update Helm chart version"
+    - "Update appVersion in DC apps"
+    - "Fix bamboo tests to improve performance"
+    - "Optimize bamboo tests to optimize memory usage"
+    - "Remove bamboo tests to improve performance"
+    - "Remove bamboo documentation for better maintainability"
+    - "Merge bamboo statefulset to improve performance"
+    - "Merge bamboo dependencies to optimize memory usage"
+    - "Update bamboo statefulset to remove deprecated code"
+    - "Optimize bamboo tests to enhance flexibility"
 dependencies:
 - name: common
   version: 1.0.0
