--- a/src/main/charts/bitbucket/Chart.yaml
+++ b/src/main/charts/bitbucket/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bitbucket
 description: A chart for installing Bitbucket Data Center on Kubernetes
 type: application
-version: 1.10.19
+version: 1.10.20
 appVersion: 7.21.11
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,7 +20,15 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update Helm chart version"
+    - "Update appVersion in DC apps"
+    - "Refactor bitbucket dependencies to update dependencies"
+    - "Rework bitbucket values to fix a bug"
+    - "Merge bitbucket templates to optimize memory usage"
+    - "Rework bitbucket chart to improve performance"
+    - "Update bitbucket documentation to update dependencies"
+    - "Fix bitbucket templates to optimize memory usage"
+    - "Fix bitbucket dependencies to implement a new feature"
+    - "Add bitbucket templates to enhance flexibility"
 
 dependencies:
 - name: common
