--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo
 description: A chart for installing Bamboo Data Center on Kubernetes
 type: application
-version: 1.10.20
+version: 1.10.21
 appVersion: 9.2.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -21,14 +21,10 @@ annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
     - "Update appVersion in DC apps"
-    - "Fix bamboo tests to improve performance"
-    - "Optimize bamboo tests to optimize memory usage"
-    - "Remove bamboo tests to improve performance"
-    - "Remove bamboo documentation for better maintainability"
-    - "Merge bamboo statefulset to improve performance"
-    - "Merge bamboo dependencies to optimize memory usage"
-    - "Update bamboo statefulset to remove deprecated code"
-    - "Optimize bamboo tests to enhance flexibility"
+    - "Optimize bamboo values to optimize memory usage"
+    - "Refactor bamboo templates to implement a new feature"
+    - "Fix bamboo templates for better readability"
+    - "Refactor bamboo templates for better readability"
 dependencies:
 - name: common
   version: 1.0.0
