--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo
 description: A chart for installing Bamboo Data Center on Kubernetes
 type: application
-version: 1.10.21
+version: 1.10.22
 appVersion: 9.2.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -21,10 +21,9 @@ annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
     - "Update appVersion in DC apps"
-    - "Optimize bamboo values to optimize memory usage"
-    - "Refactor bamboo templates to implement a new feature"
-    - "Fix bamboo templates for better readability"
-    - "Refactor bamboo templates for better readability"
+    - "Refactor bamboo chart to remove deprecated code"
+    - "Refactor bamboo dependencies to improve performance"
+    - "Move bamboo chart to enhance flexibility"
 dependencies:
 - name: common
   version: 1.0.0
