--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo
 description: A chart for installing Bamboo Data Center on Kubernetes
 type: application
-version: 1.10.22
+version: 1.10.23
 appVersion: 9.2.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,10 +20,7 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update appVersion in DC apps"
-    - "Refactor bamboo chart to remove deprecated code"
-    - "Refactor bamboo dependencies to improve performance"
-    - "Move bamboo chart to enhance flexibility"
+    - "Update Helm chart version"
 dependencies:
 - name: common
   version: 1.0.0
