--- a/src/main/charts/confluence/Chart.yaml
+++ b/src/main/charts/confluence/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: confluence
 description: A chart for installing Confluence Data Center on Kubernetes
 type: application
-version: 1.10.22
+version: 1.10.23
 appVersion: 7.19.5
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,11 +20,7 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "true"
   artifacthub.io/changes: |-
-    - "Update appVersion in DC apps"
-    - "Optimize confluence helmfile for better readability"
-    - "Remove confluence helmfile to optimize memory usage"
-    - "Merge confluence statefulset to optimize memory usage"
-    - "Merge confluence chart to implement a new feature"
+    - "Update Helm chart version"
 
 dependencies:
 - name: common
