--- a/src/main/charts/jira/Chart.yaml
+++ b/src/main/charts/jira/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: jira
 description: A chart for installing Jira Data Center on Kubernetes
 type: application
-version: 1.10.22
+version: 1.10.23
 appVersion: 9.4.3
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -21,11 +21,7 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update appVersion in DC apps"
-    - "Refactor jira helmfile for better readability"
-    - "Fix jira helmfile to remove deprecated code"
-    - "Add jira dependencies for better maintainability"
-    - "Move jira dependencies to remove deprecated code"
+    - "Update Helm chart version"
 
 dependencies:
 - name: common
