--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo
 description: A chart for installing Bamboo Data Center on Kubernetes
 type: application
-version: 1.10.23
+version: 1.10.24
 appVersion: 9.2.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,7 +20,11 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update Helm chart version"
+    - "Update appVersion in DC apps"
+    - "Rework bamboo dependencies to update dependencies"
+    - "Fix bamboo chart for better maintainability"
+    - "Add bamboo helmfile for better readability"
+    - "Merge bamboo documentation to fix a bug"
 dependencies:
 - name: common
   version: 1.0.0
