--- a/.github/workflows/release-charts.yaml
+++ b/.github/workflows/release-charts.yaml
@@ -11,7 +11,9 @@ jobs:
       contents: read
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      HELM_SIGNING_KEY: ${{secrets.TEST_SIGN_HELM }}
+      # remove this, it's for testing purposes only
+      HELM_SIGNING_KEY: ${{ secrets.TEST_SIGN_HELM }}
+      HELM_SIGNING_KEY_ID: ${{ secrets.HELM_SIGNING_KEY_ID }}
       GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}
       PYTHONPATH: /opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages
     steps:
@@ -79,7 +81,7 @@ jobs:
           gpg --import helm_key
           gpg --export > ~/.gnupg/pubring.gpg
           gpg --export-secret-keys > ~/.gnupg/secring.gpg
-          gpg --output src/main/scripts/helm_key.pub --export yzhang@atlassian.com
+          gpg --output src/main/scripts/helm_key.pub --export ${{ secrets.HELM_SIGNING_KEY_EMAIL }}
           
       - name: Release Helm Charts
         run: |
